it is my fiveth commit

--- a/dash1/index.html
+++ b/dash1/index.html
@@ -1,69 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>dashboard</title>
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-</head>
-<body>
+    <link rel="stylesheet" href="/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    />
+  </head>
+  <body>
     <div class="container">
-        <div class="sidebar">
-            <ul class="side-content">
-                <a href="#" class="logo">
-                    <i class="fa-brands fa-apple"></i>
-                        <span>Apple-IPhone</span>
-                </a>
-                <a href="#">
-                    <li class="li-part">
-                        <i class="fa-brands fa-apple"></i>
-                        <span >Apple-IPhone</span>
-                    </li>
-                </a>
-                <a href="#">
-                    <li>
-                        <i class="fa-solid fa-layer-group"></i>
-                        <span>Apple-IPhone</span>
-                    </li>
-                </a>
-                <a href="#">
-                    <li>
-                        <i class="fa-brands fa-apple"></i>
-                        <span>Apple-IPhone</span>
-                    </li>
-                </a>
-                <a href="#">
-                    <li>
-                        <i class="fa-brands fa-apple"></i>
-                        <span>Apple-IPhone</span>
-                    </li>
-                </a>
-                <a href="#">
-                    <li>
-                        <i class="fa-brands fa-apple"></i>
-                        <span>Apple-IPhone</span>
-                    </li>
-                </a>
-                <a href="#">
-                    <li>
-                        <i class="fa-brands fa-apple"></i>
-                        <span>Apple-IPhone</span>
-                    </li>
-                </a>
-            </ul>
-        </div>
-        <nav class="nav-container">
-             <form action="backend.php">
-                 <input type="text" name="serchbar" placeholder="  Search..." id="search">
-                 <label for="search"><i class="fa-solid fa-magnifying-glass"></i></label>
-                </form>
-    
-        </nav>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, consequatur nulla error doloremque fugit voluptatem repellat labore dolorum excepturi debitis ipsa est. Mollitia quaerat vitae ipsum accusamus, sint temporibus nesciunt eligendi maxime cupiditate quibusdam quis architecto aliquam culpa aut sequi molestiae fugit veniam id corporis impedit laudantium blanditiis tempore minima. Repellat harum sunt repellendus aliquid quasi natus numquam qui ipsam consectetur nobis dignissimos nam iste dicta dolor, maiores earum consequatur quo modi ex incidunt minus, rerum reiciendis a? Aspernatur est consequatur rerum soluta perspiciatis perferendis incidunt voluptas voluptate molestias minima ratione autem sit obcaecati provident dolorem, ipsam, aliquam dolor quis consectetur quasi. Ullam incidunt, quasi aspernatur quaerat optio sunt accusantium nihil unde, laudantium pariatur, blanditiis obcaecati? Inventore maiores hic repellat soluta unde? Quasi, tenetur nobis nulla facilis, molestias minima sapiente, odit vel praesentium commodi ipsa. Eaque vero dolorum, omnis nostrum reiciendis voluptas atque reprehenderit nemo, similique ducimus natus? Veritatis aspernatur, quis quia minima repellat laborum! Neque libero dolorem ea, laboriosam officiis ratione quo obcaecati, minima, voluptatem est delectus numquam doloribus omnis! Reprehenderit eligendi nulla obcaecati facere dignissimos. Tempora eum, accusantium deleniti pariatur optio, autem at dignissimos esse, voluptates itaque veniam? Possimus et aperiam quo neque quam vel necessitatibus porro aliquid!
+      <div class="sidebar">
+        <ul class="side-content">
+          <a href="#" class="logo">
+            <i class="fa-brands fa-apple"></i>
+            <span>Apple-IPhone</span>
+          </a>
+          <a href="#">
+            <li class="li-part">
+              <i class="fa-brands fa-apple"></i>
+              <span>Apple-IPhone</span>
+            </li>
+          </a>
+          <a href="#">
+            <li>
+              <i class="fa-solid fa-layer-group"></i>
+              <span>Apple-IPhone</span>
+            </li>
+          </a>
+          <a href="#">
+            <li>
+              <i class="fa-brands fa-apple"></i>
+              <span>Apple-IPhone</span>
+            </li>
+          </a>
+          <a href="#">
+            <li>
+              <i class="fa-brands fa-apple"></i>
+              <span>Apple-IPhone</span>
+            </li>
+          </a>
+          <a href="#">
+            <li>
+              <i class="fa-brands fa-apple"></i>
+              <span>Apple-IPhone</span>
+            </li>
+          </a>
+          <a href="#">
+            <li>
+              <i class="fa-brands fa-apple"></i>
+              <span>Apple-IPhone</span>
+            </li>
+          </a>
+        </ul>
+      </div>
+      <nav class="nav-container">
+        <form action="backend.php">
+          <input
+            type="text"
+            name="serchbar"
+            placeholder="  Search..."
+            id="search"
+          />
+          <label for="search"
+            ><i class="fa-solid fa-magnifying-glass"></i
+          ></label>
+        </form>
+      </nav>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam,
+      consequatur nulla error doloremque fugit voluptatem repellat labore
+      dolorum excepturi debitis ipsa est. Mollitia quaerat vitae ipsum
+      accusamus, sint temporibus nesciunt eligendi maxime cupiditate quibusdam
+      quis architecto aliquam culpa aut sequi molestiae fugit veniam id corporis
+      impedit laudantium blanditiis tempore minima. Repellat harum sunt
+      repellendus aliquid quasi natus numquam qui ipsam consectetur nobis
+      dignissimos nam iste dicta dolor, maiores earum consequatur quo modi ex
+      incidunt minus, rerum reiciendis a? Aspernatur est consequatur rerum
+      soluta perspiciatis perferendis incidunt voluptas voluptate molestias
+      minima ratione autem sit obcaecati provident dolorem, ipsam, aliquam dolor
+      quis consectetur quasi. Ullam incidunt, quasi aspernatur quaerat optio
+      sunt accusantium nihil unde, laudantium pariatur, blanditiis obcaecati?
+      Inventore maiores hic repellat soluta unde? Quasi, tenetur nobis nulla
+      facilis, molestias minima sapiente, odit vel praesentium commodi ipsa.
+      Eaque vero dolorum, omnis nostrum reiciendis voluptas atque reprehenderit
+      nemo, similique ducimus natus? Veritatis aspernatur, quis quia minima
+      repellat laborum! Neque libero dolorem ea, laboriosam officiis ratione quo
+      obcaecati, minima, voluptatem est delectus numquam doloribus omnis!
+      Reprehenderit eligendi nulla obcaecati facere dignissimos. Tempora eum,
+      accusantium deleniti pariatur optio, autem at dignissimos esse, voluptates
+      itaque veniam? Possimus et aperiam quo neque quam vel necessitatibus porro
+      aliquid!
+      <img src="/WhatsApp Image 2022-12-19 at 1.48.54 PM.jpeg" alt="" style="display: block; position: absolute; left: 400px;" >
     </div>
-
-
-</body>
+  </body>
 </html>
